--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-spl=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
+
 server.port=8080
